--- a/assets/antd-custom.less
+++ b/assets/antd-custom.less
@@ -1,4 +1,8 @@
 @import "~antd/lib/style/color/colors.less";
 
-@primary-color: @purple-6;
+@primary-color: @geekblue-6;
+@background-color-base: #fafafa;
+
 @layout-header-background: #ffffff;
+
+@layout-body-background: #fafafa;
